--- a/api/templates/pagomensual.html
+++ b/api/templates/pagomensual.html
@@ -63,8 +63,9 @@
 {% endblock %}
 {%block appcontenido%}
 
-<div class=" mt-16pt" style="margin-left: 20%;">
-    <script src="https://www.paypal.com/sdk/js?client-id=AR33IQD3wlKl-gUPmmFnIKOt8IOLsMQWIvtEjHah4JPZlmJwbvx416M_fKll6I3DTNrqOlIsRFI7UypU"></script>
+<div class=" mt-16pt mx-auto" >
+    <h5>Haz tu pago de manera más fácil desde una computadora.</h5>
+    <script src="https://www.paypal.com/sdk/js?client-id=AR33IQD3wlKl-gUPmmFnIKOt8IOLsMQWIvtEjHah4JPZlmJwbvx416M_fKll6I3DTNrqOlIsRFI7UypU&currency=MXN"></script>
     <div id="paypal-button-container"></div>
     <div id="result-message"></div>
     <script>
@@ -107,7 +108,7 @@
                                 'X-CSRFToken': csrftoken
                             },
                             body: JSON.stringify({
-                                cost: "10.00"  // Suponiendo que el costo es 10.00, reemplaza con el valor correcto
+                                cost: "00.00"  // Suponiendo que el costo es 10.00, reemplaza con el valor correcto
                             }),
                         });
     
