--- a/api/templates/templatecontenido.html
+++ b/api/templates/templatecontenido.html
@@ -274,6 +274,14 @@
                         </a>
                     </li>
                     {% endif %}
+                    {% if user.is_superuser %}  
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-button" href="{% url 'PersonasPagos' %}" >
+                            <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">people_outline</span>
+                            <span class="sidebar-menu-text">Revisión de Usuarios</span>
+                        </a>
+                    </li>
+                {% endif %}
                     <li class="sidebar-menu-item">
                         <a class="sidebar-menu-button"
                            href="{% url 'logout' %}">
@@ -370,7 +378,7 @@
                 </ul>
                 {% endif %}
                 
-
+                
                 <!-- // END Sidebar Content -->
 
                     </div>
