--- a/api/templates/Simulator/simulator_enarm_tres.html
+++ b/api/templates/Simulator/simulator_enarm_tres.html
@@ -170,7 +170,7 @@
             // Cuando el usuario intenta retroceder, añade de nuevo un estado falso
             window.history.pushState(null, "", window.location.href);
             // Muestra una alerta opcional
-            alert('No puedes regresar a la página anterior.');
+            alert('No puedes regresar a la página anterior hasta terminar el examen por favor.');
         };
     }
 
