--- a/api/templates/Simulator/simulator_topic.html
+++ b/api/templates/Simulator/simulator_topic.html
@@ -171,7 +171,7 @@
             // Cuando el usuario intenta retroceder, añade de nuevo un estado falso
             window.history.pushState(null, "", window.location.href);
             // Muestra una alerta opcional
-            alert('No puedes regresar a la página anterior hasta terminar el examen por favor.');
+            alert('No puedes regresar a la página anterior.');
         };
     }
 
