Ultimos cambios Paypal Funcionando Live

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -148,7 +148,7 @@
                     <div class="card-body flex">
                         <div class="d-flex">
                             <div class="flex">
-                                <a class="card-title" href="{% url 'mostrar_enarm' %}">Simulador ENARM 365</a>
+                                <a class="card-title" href="">Simulador ENARM 365</a>
                                 <small class="text-50 font-weight-bold mb-4pt">Suscripción Pro</small>
                             </div>
                             <a href="" data-toggle="tooltip" data-title="Add Favorite"
