--- a/api/templates/payments.html
+++ b/api/templates/payments.html
@@ -81,6 +81,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 class="text-underline">Pagos</h2>
+                        <div class="table-responsive">
                         <table id="topicsTable">
                             <thead>
                                 <tr>
@@ -106,6 +107,7 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
