--- a/api/static/css/styles.css
+++ b/api/static/css/styles.css
@@ -323,3 +323,15 @@ th {
 .form-group {
   position: relative;
 }
+
+.floating-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999; /* Asegura que esté por encima de otros elementos */
+  /* Otros estilos para el div flotante */
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+}
