--- a/api/templates/blog1.html
+++ b/api/templates/blog1.html
@@ -69,17 +69,17 @@
 
         <div class="d-flex flex-column flex-md-row align-items-center align-items-md-start flex mb-16pt text-center text-md-left">
             <div class="avatar overlay overlay--primary mb-16pt mb-md-0 mr-md-16pt">
-                <img src="../static/img/fondos/LoginBackground.webp"
+                <img src="{% static 'img/fondos/LoginBackground.webp' %}"
                      class="avatar-img rounded"
                      alt="lesson">
                 <div class="overlay__content"></div>
             </div>
             <div class="flex">
-                <h1 class="h2 measure-lead-max mb-16pt">¿Cómo manejar la ansiedad ante el examen?</h1>
+                <h1 class="h2 measure-lead-max mb-16pt">{{information.titlePanel}}</h1>
                 <div class="d-flex align-items-center">
                     <a href="teacher-profile.html"
                        class="avatar avatar-sm mr-12pt">
-                        <img src="../static/img/Unatinta.png"
+                        <img src="{% static 'img/Unatinta.png' %}"
                              alt="author"
                              class="avatar-img rounded-circle">
                     </a>
@@ -87,7 +87,7 @@
                         <a href="teacher-profile.html"
                            class="card-title">Lygnum</a>
                         <div class="d-flex align-items-center">
-                            <small class="text-50 mr-2">4 de Junio 2024</small>
+                            <small class="text-50 mr-2">{{information.fechaPanel}}</small>
                             <small class="text-50 mr-2">2 minutos de lectura</small>
                             <a href=""
                                class="text-50"><small>Liked</small></a>
@@ -125,39 +125,30 @@
                 </div>
             </div>
             <div class="flex">
-                <p class="lead measure-paragraph-max text-justify">Los exámenes pueden ser una fuente significativa de ansiedad para muchas personas. El estrés de las expectativas, la presión por el rendimiento y el temor a fallar pueden combinarse para crear un ambiente de alta tensión. Sin embargo, existen estrategias y técnicas que puedes implementar para manejar y reducir la ansiedad antes de un examen. A continuación, te ofrecemos algunos consejos prácticos para enfrentarte a esta situación de manera efectiva.</p>
+                <p class="lead measure-paragraph-max text-justify">{{information.texto_uno}}</p>
             </div>
         </div>
 
         <blockquote class="blockquote blockquote--reverse pl-0">
-            <p class="text-50">"El éxito no es la clave de la felicidad. La felicidad es la clave del éxito. Si amas lo que haces, tendrás éxito.".</p>
-            <footer class="blockquote-footer">- Albert Schweitzer
-                <cite title="Source Title">Prepara un plan de estudio</cite>
-            </footer>
+            <p class="text-50">{{information.tituloPanel_dos}}</p>
+           
         </blockquote>
 
-        <p class="text-50 measure-paragraph-max mb-24pt text-justify">Una de las principales causas de ansiedad es la falta de preparación. Organiza un plan de estudio que te permita repasar todos los temas con tiempo suficiente. Divide el material en partes manejables y establece metas diarias o semanales. Utiliza técnicas como mapas mentales, resúmenes y tarjetas de memoria para facilitar el aprendizaje.</p>
+        <p class="text-50 measure-paragraph-max mb-24pt text-justify">{{information.texto_dos}}</p>
 
-        <h4>Practica técnicas de relajación</h4>
+        <h4>{{information.tituloPanel_tres}}</h4>
 
         <div class="d-flex flex-column flex-md-row mb-32pt">
             <div class="flex mb-16pt mb-md-0 mr-md-16pt">
-                <p class="lead text-70 measure-paragraph-max text-justify">Las técnicas de relajación pueden ser muy efectivas para reducir la ansiedad. Practica la respiración profunda, la meditación o el yoga. Dedica unos minutos cada día a relajarte y despejar tu mente. Estas prácticas pueden ayudarte a mantener la calma y la concentración el día del examen.</p>
+                <p class="lead text-70 measure-paragraph-max text-justify">{{information.texto_tres}}</p>
 
                 <blockquote class="blockquote">
-                    <p class="text-50">"Un problema compartido es un problema a la mitad."</p>
-                    <footer class="blockquote-footer">Anonimo
-                        <cite title="Source Title">''</cite>
-                    </footer>
+                    <p class="text-50">{{information.texto_referencia}}</p>
+                    
                 </blockquote>
             </div>
             <div>
-                <div class="rounded p-relative o-hidden overlay overlay--primary">
-                    <img class="rounded" width="200" height="180"
-                         src="../static/img/fondos/Login Test 1500 x 2500.webp"
-                         alt="image">
-                    <div class="overlay__content"></div>
-                </div>
+                
             </div>
         </div>
 
