--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -120,6 +120,134 @@
     </div>
 </div>
 
+<div class="page-section border-bottom-2">
+    <div class="container page__container">
+
+        <div class="page-separator">
+            <div class="page-separator__text">Lee Nuestro Blog</div>
+        </div>
+
+        <div class="row card-group-row">
+
+            <div class="col-md-6 col-lg-4 card-group-row__col">
+
+                <div class="card card--elevated posts-card-popular overlay card-group-row__card">
+                    <img src="{% static 'img/fondos/registro.webp' %}" alt="" class="card-img">
+                    <div class="fullbleed bg-primary" style="opacity: .5"></div>
+                    <div class="posts-card-popular__content">
+                        <div class="card-body d-flex align-items-center">
+                            <div class="avatar-group flex">
+
+                            </div>
+                            <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
+                                    class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
+                                <small>327</small></a>
+                        </div>
+                        <div class="posts-card-popular__title card-body">
+                            <small class="text-muted text-uppercase">Ansiedad</small>
+                            <a class="card-title" href="{% url 'blogansiedad' %}">Como manejar la ansiedad ante el examen?</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-6 col-lg-4 card-group-row__col">
+
+                <div class="card card--elevated posts-card-popular overlay card-group-row__card">
+                    <img src="{% static 'img/fondos/LoginBackground.webp' %}" alt="" class="card-img">
+                    <div class="fullbleed bg-primary" style="opacity: .5"></div>
+                    <div class="posts-card-popular__content">
+                        <div class="card-body d-flex align-items-center">
+                            <div class="avatar-group flex">
+
+                            </div>
+                            <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
+                                    class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
+                                <small>327</small></a>
+                        </div>
+                        <div class="posts-card-popular__title card-body">
+                            <small class="text-muted text-uppercase">Preparacion</small>
+                            <a class="card-title" href="{% url 'blogestudio' %}">Como estudio todos los dias?</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-6 col-lg-4 card-group-row__col">
+
+                <div class="card card--elevated posts-card-popular overlay card-group-row__card">
+                    <img src="{% static 'img/fondos/passforgot.webp' %}" alt="" class="card-img">
+                    <div class="fullbleed bg-primary" style="opacity: .5"></div>
+                    <div class="posts-card-popular__content">
+                        <div class="card-body d-flex align-items-center">
+                            <div class="avatar-group flex">
+
+                            </div>
+                            <a style="text-decoration: none;" class="d-flex align-items-center" href=""><i
+                                    class="material-icons mr-1" style="font-size: inherit;">remove_red_eye</i>
+                                <small>327</small></a>
+                        </div>
+                        <div class="posts-card-popular__title card-body">
+                            <small class="text-muted text-uppercase">Motivacion</small>
+                            <a class="card-title" href="{% url 'blogmotivado' %}">Como mantenerme motivado?</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="posts-cards">
+
+            <div class="card posts-card mb-0">
+                <div class="posts-card__content d-flex align-items-center flex-wrap">
+                    {% if not es_mayor_a_30_dias %}
+                    <div class="avatar avatar-lg mr-3">
+                        <a href="{% url 'mostrar_enarm' %}"><img src="{% static 'img/LogoGeneralSinFondo.png' %}" alt="avatar"
+                                class="avatar-img rounded"></a>
+                    </div>
+                    {% else %}
+                    <div class="avatar avatar-lg mr-3">
+                        <a href=""><img src="{% static 'img/LogoGeneralSinFondo.png' %}" alt="avatar"
+                                class="avatar-img rounded"></a>
+                    </div>
+                    {% endif %}
+                    {% if not es_mayor_a_30_dias %}
+                    <div class="posts-card__title flex d-flex flex-column">
+                        <a href="{% url 'mostrar_enarm' %}" class="card-title mr-3">Simulador ENARM 365</a>
+                        <small class="text-50">Practica todo el examen.</small>
+                    </div>
+
+                    {% else %}
+                    <div class="posts-card__title flex d-flex flex-column">
+                        <a href="" class="card-title mr-3">Simulador ENARM 365</a>
+                        <small class="text-50">Practica todo el examen.</small>
+                    </div>
+                    {% endif %}
+                    <div class="d-flex align-items-center flex-column flex-sm-row posts-card__meta">
+                        <div class="mr-3 text-50 text-uppercase posts-card__tag d-flex align-items-center">
+                            <i class="material-icons text-muted-light mr-1">folder_open</i> ENARM365
+                        </div>
+                        <div class="mr-3 text-50 posts-card__date">
+                            <small>Suscripción Pro</small>
+                        </div>
+                        <div class="media ml-sm-auto align-items-center">
+                            <div class="media-left mr-2 avatar-group">
+
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
 
 <!-- Inicia Seccion de Simuladores -->
 <div class="page-section border-bottom-2">
